피드백 2차 수정